--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server --watch src/jobs.json --port 5000"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
