--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "server": "json-server --watch src/jobs.json --port 5000"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.7.3",
     "@react-google-maps/api": "^2.19.3",
+    "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.1",
-    "react-spinner": "^0.2.7"
+    "react-spinner": "^0.2.7",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
